lab05: global update
1. Пофиксил траблы мидлвараа
2. Добавил сваггер
